@@ -3,7 +3,6 @@ package online.kingdomkeys.kingdomkeys.world.dimension.castle_oblivion.system.fl
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.Direction;
 import net.minecraft.nbt.CompoundTag;
-import net.minecraft.resources.ResourceLocation;
 import net.minecraft.server.level.ServerLevel;
 import net.minecraft.world.level.block.state.BlockState;
 import online.kingdomkeys.kingdomkeys.KingdomKeys;
@@ -11,6 +10,7 @@ import online.kingdomkeys.kingdomkeys.block.CardDoorBlock;
 import online.kingdomkeys.kingdomkeys.block.ModBlocks;
 import online.kingdomkeys.kingdomkeys.data.CastleOblivionData;
 import online.kingdomkeys.kingdomkeys.entity.block.CardDoorTileEntity;
+import online.kingdomkeys.kingdomkeys.item.card.KeycardType;
 import online.kingdomkeys.kingdomkeys.item.card.WorldCardItem;
 import online.kingdomkeys.kingdomkeys.util.Utils;
 import online.kingdomkeys.kingdomkeys.world.dimension.castle_oblivion.system.registry.ModFloorTypes;
@@ -21,6 +21,7 @@ import online.kingdomkeys.kingdomkeys.world.dimension.castle_oblivion.system.roo
 
 import javax.annotation.Nullable;
 import java.util.*;
+import java.util.concurrent.atomic.AtomicInteger;
 
 public class Floor {
 
@@ -35,30 +36,29 @@ public class Floor {
     }
 
     public Floor(ServerLevel level) {
-        CastleOblivionData.InteriorData interiorData = CastleOblivionData.InteriorData.get(level);
+        CastleOblivionData.InteriorData interiorData = CastleOblivionData.InteriorData.get(level).orElseThrow();
         floorID = interiorData.getFloors().size();
         interiorData.addFloor(this);
-        RoomData entranceHall = new RoomData(RoomPos.ZERO, RoomData.Type.ENTRANCE);
+        RoomData entranceHall = new RoomData(floorID, RoomPos.ZERO, RoomData.Type.ENTRANCE);
         entranceHall.setDoor(DoorData.Type.ENTRANCE, RoomDirection.SOUTH);
         entranceHall.setDoor(DoorData.Type.HALL, RoomDirection.NORTH);
         entranceHall.setRemainingDoors(DoorData.Type.NONE);
-        entranceHall.setParent(this);
         rooms.put(entranceHall.pos, entranceHall);
     }
 
     public static Floor getOrCreateFirstFloor(ServerLevel level) {
-        CastleOblivionData.InteriorData capability = CastleOblivionData.InteriorData.get(level);
+        CastleOblivionData.InteriorData capability = CastleOblivionData.InteriorData.get(level).orElseThrow();
         //Only do this if there are no floors
         if (capability.getFloors().isEmpty()) {
             Floor floor = new Floor(level);
             RoomData data = floor.getRoom(RoomPos.ZERO);
-            Room room = new Room(ModRoomTypes.ENTRANCE_HALL.get(), floor.getFloorID(), RoomPos.ZERO);
+            Room room = new Room(ModRoomTypes.ENTRANCE_HALL.get(), floor.getFloorID(), RoomPos.ZERO, 0);
             room.setPosition(new BlockPos(0, 59, 0));
             BlockPos southDoor = new BlockPos(16, 60, 1); //door to exit CO
             BlockPos northDoor = new BlockPos(16, 63, 67); //door to first room
             room.doors.put(RoomDirection.NORTH, new Room.Door(data.getDoor(RoomDirection.NORTH), northDoor));
             room.doors.put(RoomDirection.SOUTH, new Room.Door(data.getDoor(RoomDirection.SOUTH), southDoor));
-            room.setStructure(ModRoomStructures.ENTRANCE_HALL_1F.get());
+            room.setStructure(level, ModRoomStructures.ENTRANCE_HALL_1F.get());
             data.setGenerated(room);
             BlockState northState = ModBlocks.cardDoor.get().defaultBlockState().setValue(CardDoorBlock.FACING, Direction.NORTH).setValue(CardDoorBlock.GENERATED, true).setValue(CardDoorBlock.OPEN, false);
             BlockState southState = ModBlocks.cardDoor.get().defaultBlockState().setValue(CardDoorBlock.FACING, Direction.SOUTH).setValue(CardDoorBlock.GENERATED, true).setValue(CardDoorBlock.OPEN, true);
@@ -79,7 +79,7 @@ public class Floor {
             capability.setDirty();
             return floor;
         }
-        return capability.getFloors().get(0);
+        return capability.getFloors().getFirst();
     }
 
     public RoomData getExitRoom() {
@@ -94,23 +94,26 @@ public class Floor {
         return type != ModFloorTypes.NONE.get();
     }
 
+    //thought this would be useful but not sure if it really is as we don't use it so may remove
     public boolean inFloor(BlockPos pos) {
         if (!rooms.isEmpty()) {
-            Room entrance = rooms.get(RoomPos.ZERO).getGenerated();
-            if (entrance != null) {
-                int maxX = entrance.getPosition().getX() + entrance.getStructure().getWidth();
+            if (rooms.get(RoomPos.ZERO).getGenerated().isPresent()) {
+                Room entrance = rooms.get(RoomPos.ZERO).getGenerated().get();
+                int maxX = entrance.getPosition().getX() + entrance.getWidth();
                 int minX = entrance.getPosition().getX();
-                int maxZ = entrance.getPosition().getZ() + entrance.getStructure().getDepth();
+                int maxZ = entrance.getPosition().getZ() + entrance.getDepth();
                 int minZ = entrance.getPosition().getZ();
                 for (Map.Entry<RoomPos, RoomData> roomData : rooms.entrySet()) {
-                    Room room = roomData.getValue().getGenerated();
-                    int roomWidth = room.getStructure().getWidth();
-                    int roomDepth = room.getStructure().getDepth();
-                    BlockPos roomPos = room.getPosition();
-                    minX = Math.min(minX, roomPos.getX());
-                    maxX = Math.max(maxX, roomPos.getX() + roomWidth);
-                    minZ = Math.min(minZ, roomPos.getZ());
-                    maxZ = Math.max(maxZ, roomPos.getZ() + roomDepth);
+                    Optional<Room> room = roomData.getValue().getGenerated();
+                    if (room.isPresent()) {
+                        int roomWidth = room.get().getWidth();
+                        int roomDepth = room.get().getDepth();
+                        BlockPos roomPos = room.get().getPosition();
+                        minX = Math.min(minX, roomPos.getX());
+                        maxX = Math.max(maxX, roomPos.getX() + roomWidth);
+                        minZ = Math.min(minZ, roomPos.getZ());
+                        maxZ = Math.max(maxZ, roomPos.getZ() + roomDepth);
+                    }
                 }
                 return pos.getX() >= minX && pos.getX() <= maxX && pos.getZ() >= minZ && pos.getZ() <= maxZ;
             }
@@ -118,7 +121,7 @@ public class Floor {
         return false;
     }
 
-    public void setWorldCard(WorldCardItem card) {
+    public void setWorldCard(WorldCardItem.WorldCard card) {
         type = card.getFloorType();
         generateLayout();
     }
@@ -128,7 +131,7 @@ public class Floor {
     }
 
     public BlockPos getEntranceHallPosition() {
-        return getRoom(RoomPos.ZERO).getGenerated().getPosition();
+        return getEntranceHall().getGenerated().map(Room::getPosition).orElse(null);
     }
 
     public RoomData getEntranceHall() {
@@ -137,25 +140,28 @@ public class Floor {
     }
 
     public void generateLayout() {
-        RoomData entrance = new RoomData(new RoomPos(0, 1), RoomData.Type.NORMAL);
+        RoomData entrance = new RoomData(floorID, new RoomPos(0, 1), RoomData.Type.NORMAL);
         entrance.setDoor(DoorData.Type.FIXED, RoomDirection.SOUTH);
-        entrance.setParent(this);
         RoomData currentRoom = entrance;
         rooms.put(entrance.pos, entrance);
         RoomDirection prevDir = RoomDirection.SOUTH;
+        KingdomKeys.LOGGER.debug("Generating crit path");
         for (int i = 0; i < type.getCritPathLength(); i++) {
-            Map<RoomData, RoomDirection> adjRooms = getAdjacentRooms(currentRoom);
+            KingdomKeys.LOGGER.debug("Crit path room no. {}, {}", i, currentRoom.pos);
+            EnumMap<RoomDirection, RoomData> adjRooms = getAdjacentRooms(currentRoom);
             List<RoomDirection> directions = new ArrayList<>(List.of(RoomDirection.values()));
             //prevent rooms going into the hall
             if (currentRoom.pos.y() == 1) {
                 directions.remove(RoomDirection.SOUTH);
             }
             //remove directions that have a room already in that direction
-            for (RoomDirection direction : adjRooms.values()) {
+            for (RoomDirection direction : adjRooms.keySet()) {
                 directions.remove(direction);
+                KingdomKeys.LOGGER.debug("Removing adjacent room in dir {}", direction);
             }
             //No more possible directions to continue so should intersect
             if (directions.isEmpty()) {
+                KingdomKeys.LOGGER.debug("No free directions, starting intersection");
                 boolean deadEnd = true;
                 RoomDirection nextDir = null;
                 int intersections = 0;
@@ -185,13 +191,11 @@ public class Floor {
                         break;
                     }
                 }
-                //No possible directions to go so make this the exit room
+                //No possible directions to go so stop
                 if (deadEnd) {
                     if (!currentRoom.getDoors().containsKey(nextDir)) {
-                        currentRoom.setDoor(DoorData.Type.EXIT, nextDir);
-                        currentRoom.setRemainingDoors(DoorData.Type.NONE);
-                        currentRoom.finalizeType(RoomData.Type.EXIT);
-                        exitRoom = currentRoom.pos;
+                        currentRoom.finalizeType(RoomData.Type.NORMAL);
+                        KingdomKeys.LOGGER.debug("Reached dead end");
                     }
                     //Otherwise go through intersecting rooms and add needed doors
                 } else {
@@ -201,6 +205,7 @@ public class Floor {
                         if (intersectedRoom != null) {
                             intersectedRoom.addDoor(DoorData.Type.NORMAL, nextDir);
                             intersectedRoom.addDoor(DoorData.Type.NORMAL, nextDir.opposite());
+                            KingdomKeys.LOGGER.debug("Intersection happened!");
                         }
                         pos = pos.add(nextDir);
                     }
@@ -210,17 +215,14 @@ public class Floor {
                         currentRoom.setDoor(DoorData.Type.NORMAL, nextDir);
                         //create next room in direction with door at opposite direction
                         if (i == type.getCritPathLength() - 1) {
-                            RoomData newRoom = new RoomData(pos);
+                            RoomData newRoom = new RoomData(floorID, pos);
                             newRoom.setDoor(DoorData.Type.NORMAL, nextDir.opposite());
                             currentRoom.finalizeType(RoomData.Type.NORMAL);
                             currentRoom = newRoom;
-                            //final room needs extra door
-                            currentRoom.setDoor(DoorData.Type.EXIT, nextDir);
-                            currentRoom.setRemainingDoors(DoorData.Type.NONE);
-                            currentRoom.finalizeType(RoomData.Type.EXIT);
-                            exitRoom = currentRoom.pos;
+                            //last room does not need next door
+                            currentRoom.finalizeType(RoomData.Type.NORMAL);
                         } else {
-                            RoomData newRoom = new RoomData(pos);
+                            RoomData newRoom = new RoomData(floorID, pos);
                             newRoom.setDoor(DoorData.Type.NORMAL, nextDir.opposite());
                             currentRoom.finalizeType(RoomData.Type.NORMAL);
                             currentRoom = newRoom;
@@ -230,6 +232,7 @@ public class Floor {
                     }
                 }
             } else {
+                directions.forEach(roomDirection -> KingdomKeys.LOGGER.debug("Possible direction: {}", roomDirection));
                 int rand = Utils.randomWithRange(0, directions.size() - 1);
                 RoomDirection nextDir = directions.get(rand);
                 prevDir = nextDir.opposite();
@@ -238,29 +241,131 @@ public class Floor {
                 //create next room in direction with door at opposite direction
                 if (i == type.getCritPathLength() - 1) {
                     currentRoom = createRoomInDirection(currentRoom, nextDir);
-                    //final room needs extra door
-                    currentRoom.setDoor(DoorData.Type.EXIT, nextDir);
-                    currentRoom.setRemainingDoors(DoorData.Type.NONE);
-                    currentRoom.finalizeType(RoomData.Type.EXIT);
-                    exitRoom = currentRoom.pos;
+                    //last room does not need next door
+                    currentRoom.finalizeType(RoomData.Type.NORMAL);
                 } else {
                     currentRoom.finalizeType(RoomData.Type.NORMAL);
                     currentRoom = createRoomInDirection(currentRoom, nextDir);
                 }
             }
-            currentRoom.setParent(this);
             rooms.put(currentRoom.pos, currentRoom);
         }
+        //create special encounter rooms for the key cards
 
-        currentRoom = entrance;
+        List<RoomData> possibleRoomsForKeyRooms = roomsWithRemainingDoors();
+
+        KingdomKeys.LOGGER.debug("Generating Key rooms, {} rooms have space for doors", possibleRoomsForKeyRooms.size());
+        //check if there are 4 rooms for the key rooms, first one gives key of beginnings, second one gives key of guidance, third one gives key to truth, fourth one leads to exit room
+        //need to find rooms that have at least one spare door for these rooms
+        if (possibleRoomsForKeyRooms.size() < 4) {
+            //probably could happen in rare circumstances probably can handle it by forcefully extending the crit path
+            KingdomKeys.LOGGER.error("No rooms suitable for key rooms making floor impossible to complete");
+        } else {
+            //TODO maybe let floor type configure how many key rooms there are?
+            for (int i = 0; i < 3; i++) {
+                KingdomKeys.LOGGER.debug("Generating Key room no. {}", i);
+                int index = Utils.randomWithRange(0, possibleRoomsForKeyRooms.size() - 1);
+                RoomData room = possibleRoomsForKeyRooms.get(index);
+                KeycardType keycardType = KeycardType.values()[i];
+                RoomDirection direction = setRandomFreeDoor(room, DoorData.Type.KEY, keycardType);
+                if (direction != null) {
+                    RoomData newRoom = new RoomData(floorID, room.pos.add(direction), RoomData.Type.ENCOUNTER);
+                    //create door that goes back, fixed type as the only way to get in the room is by opening the door on the other side
+                    newRoom.setDoor(DoorData.Type.FIXED, direction.opposite());
+                    if (rooms.containsKey(newRoom.pos)) {
+                        KingdomKeys.LOGGER.debug("Tried to create key room where room already exists {} trying again...", newRoom.pos);
+                        //try again (potentially problematic...)
+                        possibleRoomsForKeyRooms.remove(index);
+                        i--;
+                        continue;
+                    }
+
+                    //room of truth to conqueror's respite
+                    if (i == 2) {
+                        EnumMap<RoomDirection, RoomData> adjacentRooms = getAdjacentRooms(newRoom);
+                        if (adjacentRooms.size() == 4) {
+                            //worst case scenario probably need to come up with a way to prevent this from happening
+                            KingdomKeys.LOGGER.error("Room of Truth generated in a position that does not allow conquerer's respite to generate");
+                        } else {
+                            KingdomKeys.LOGGER.debug("Generating conqueror's respite room");
+                            for (RoomDirection dir : RoomDirection.values()) {
+                                if (!adjacentRooms.containsKey(dir)) {
+                                    RoomData exitRoom = new RoomData(floorID, newRoom.pos.add(dir), RoomData.Type.EXIT);
+                                    exitRoom.setFixedType(ModRoomTypes.CONQUERORS_RESPITE.get());
+                                    exitRoom.setDoor(DoorData.Type.FIXED, dir.opposite());
+                                    exitRoom.setDoor(DoorData.Type.EXIT, dir);
+                                    exitRoom.setRemainingDoors(DoorData.Type.NONE);
+                                    newRoom.setDoor(DoorData.Type.FIXED, dir, true);
+                                    rooms.put(exitRoom.pos, exitRoom);
+                                    this.exitRoom = exitRoom.pos;
+                                    KingdomKeys.LOGGER.debug("Generated exit room at {}", exitRoom.pos);
+                                    break;
+                                }
+                            }
+                        }
+                    }
+                    //set the rest of the doors to none so there is only one entrance to the room
+                    newRoom.setRemainingDoors(DoorData.Type.NONE);
+                    rooms.put(newRoom.pos, newRoom);
+                    KingdomKeys.LOGGER.debug("Finished generating key room no. {} at {}", i, newRoom.pos);
+                    //check if room no longer has any remaining doors and remove it if so, as it should be possible to have more than one key room connected to the same room
+                    if (!room.hasRemaningDoors()) {
+                        possibleRoomsForKeyRooms.remove(index);
+                    }
+                } else {
+                    KingdomKeys.LOGGER.error("No free doors somehow, retrying key door {}", i);
+                    possibleRoomsForKeyRooms.remove(index);
+                    i--;
+                }
+            }
+            KingdomKeys.LOGGER.debug("Generated key rooms");
+        }
+
         //todo bonus rooms
-        for (int i = 0; i < type.getBonusRoomCount(); i++) {
+        for (int i = 0; i < type.getBonusRooms().count(); i++) {
 
+        }
+
+        KingdomKeys.LOGGER.debug("Finished generating layout");
+        KingdomKeys.LOGGER.debug("Total rooms: {}", rooms.size());
+    }
+
+    public List<RoomData> roomsWithRemainingDoors() {
+        List<RoomData> list = new ArrayList<>();
+        rooms.values().forEach(room -> {
+            //first check if there are remaining doors
+            AtomicInteger freeCount = new AtomicInteger();
+                room.getRemainingDirections().forEach(roomDirection -> {
+                    if (getAdjacentRoom(room, roomDirection).isEmpty()) {
+                        freeCount.incrementAndGet();
+                    }
+                });
+
+                if (freeCount.get() > 0) {
+                    list.add(room);
+                }
+        });
+        return list;
+    }
+
+    //Set random remaining door and return the direction it was set for.
+    public RoomDirection setRandomFreeDoor(RoomData room, DoorData.Type doorType, @Nullable KeycardType keycardType) {
+        List<RoomDirection> remainingDirs = room.getRemainingDirections().stream().filter(roomDirection -> getAdjacentRoom(room, roomDirection).isEmpty()).toList();
+        if (!remainingDirs.isEmpty()) {
+            RoomDirection dir = remainingDirs.get(Utils.randomWithRange(0, remainingDirs.size() - 1));
+            if (keycardType != null) {
+                room.getDoors().put(dir, new DoorData(room, doorType, dir, keycardType));
+            } else {
+                room.getDoors().put(dir, new DoorData(room, doorType, dir));
+            }
+            return dir;
+        } else {
+            return null;
         }
     }
 
     public RoomData createRoomInDirection(RoomData prevRoom, RoomDirection direction) {
-        RoomData newRoom = new RoomData(RoomPos.inDirection(prevRoom.pos, direction));
+        RoomData newRoom = new RoomData(floorID, RoomPos.inDirection(prevRoom.pos, direction));
         newRoom.setDoor(DoorData.Type.NORMAL, direction.opposite());
         return newRoom;
     }
@@ -270,29 +375,25 @@ public class Floor {
     }
 
     public List<RoomData> getGeneratedRooms() {
-        return rooms.values().stream().filter(roomData -> roomData.getGenerated() != null).toList();
+        return rooms.values().stream().filter(roomData -> roomData.getGenerated().isPresent()).toList();
     }
 
     public RoomData getRoom(RoomPos pos) {
         return rooms.get(pos);
     }
 
-    @Nullable
-    public RoomData getAdjacentRoom(RoomData room, RoomDirection direction) {
+    public Optional<RoomData> getAdjacentRoom(RoomData room, RoomDirection direction) {
         RoomPos adjPos = room.pos.add(direction);
         if (rooms.containsKey(adjPos)) {
-            return rooms.get(adjPos);
+            return Optional.ofNullable(rooms.get(adjPos));
         }
-        return null;
+        return Optional.empty();
     }
 
-    public Map<RoomData, RoomDirection> getAdjacentRooms(RoomData room) {
-        Map<RoomData, RoomDirection> rooms = new HashMap<>();
-        for (int i = 0; i < RoomDirection.values().length; i++) {
-            RoomData roomData = getAdjacentRoom(room, RoomDirection.values()[i]);
-            if (roomData != null) {
-                rooms.put(roomData, RoomDirection.values()[i]);
-            }
+    public EnumMap<RoomDirection, RoomData> getAdjacentRooms(RoomData room) {
+        EnumMap<RoomDirection, RoomData> rooms = new EnumMap<>(RoomDirection.class);
+        for (RoomDirection dir : RoomDirection.values()) {
+            getAdjacentRoom(room, dir).ifPresent(adjRoom -> rooms.put(dir, adjRoom));
         }
         return rooms;
     }
@@ -331,7 +432,7 @@ public class Floor {
 
     public void deserializeNBT(CompoundTag tag) {
         floorID = tag.getInt("id");
-        type = ModJsonRegistries.FLOOR_TYPE.get().getValue(ResourceLocation.parse(tag.getString("floor_type")));
+        type = ModJsonRegistries.FLOOR_TYPE.get().getValue(KingdomKeys.rl(tag.getString("floor_type")));
         rooms.clear();
         int roomssize = tag.getInt("rooms_size");
         CompoundTag roomsTag = tag.getCompound("rooms");
@@ -340,7 +441,7 @@ public class Floor {
             rooms.put(data.pos, data);
         }
         if (tag.contains("exit")) {
-            exitRoom = new RoomPos(tag.getCompound("exit"));
+            exitRoom = RoomPos.deserializeNBT(tag.getCompound("exit"));
         }
     }
 }
